webextensions/sidebar/styles/square/border.css
/*
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
*/

.tab,
.after-tabs button {
  border: 1px solid var(--tab-border);
  border-width: 1px 0;
  margin-bottom: -1px;
  padding: 0.25em;
}

.after-tabs button {
  padding: 0em;
}

:root.have-pinned-tabs #tabbar {
  border-top: 1px solid var(--tab-border);
}

#tabbar .tab.pinned + .tab:not(.pinned),
#tabbar .tab:not(.pinned):first-of-type {
  border-top: none;
}

#tabbar + .after-tabs button {
  border-bottom: none;
}

:root.left .tab:not(.pinned) {
  padding-right: 0.35em;
}
:root.left .tab:not(.pinned)[data-parent-id] {
  border-left-width: 1px;
}

:root.right .tab:not(.pinned) {
  padding-left: 0.35em;
}
:root.right .tab:not(.pinned)[data-parent-id] {
  border-right-width: 1px;
}

.tab .favicon {
  margin-bottom: 0.25em;
  margin-top: 0.25em;
}

.tab .label {
  margin-left: 0.25em;
  padding: 0;
}

.tab.pinned {
  border-width: 0 1px 1px 0;
}

.tab.pinned.last-row {
  border-bottom-width: 0;
}

